apps/production/dashboard/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: dashboard
spec:
  selector:
    app: dashboard-database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
